# cmake-qml-template

./: .gitignore  CMakeLists.txt  Definitions.cmake  README.cmake-qml
src/: CMakeLists.txt  main.cpp
src/qml/: main.qml
windows/: CMakeLists.txt
